--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: Haoyue Blog
 SEOTitle: 皓月的博客 | Haoyue Blog
 header-img: img/post-bg-desk.jpg
-email: qiubaiying@gmail.com
-description: "AAA钟期既遇，奏流水以何惭?"
+email: haoyue.work@gmail.com
+description: "Thinking will not overcome fear but action will"
 keyword: "Haoyue, Haoyue Blog, 皓月的博客"
 url: "http://jhyalex.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
@@ -11,18 +11,17 @@ github_repo: "https://github.com/jhyalex/jhyalex.github.io.git" # you code repos
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
-sidebar-avatar: /img/avatar-m.jpg    # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "Stay calm, stay cool"
+sidebar-avatar: /img/haoyue.jpg    # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
 # SNS settings
 RSS: false
-# weibo_username:     qiubaiying
-zhihu_username:     qiubaiying
-github_username:    qiubaiying
-facebook_username:  baiying.qiu.7
-jianshu_username:   e71990ada2fd
+
+zhihu_username:     hao-yue-70
+github_username:    jhyalex
+#facebook_username:  
 #twitter_username:   qiubaiying
 
 
@@ -78,7 +77,7 @@ ba_track_id: b50bf2b12b5338a1845e33832976fd68
 
 # Google Analytics
 ga_track_id: 'UA-90855596-1'            # Format: UA-xxxxxx-xx
-ga_domain: qiubaiying.top               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
+#ga_domain: qiubaiying.top               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
 
 
 
@@ -99,9 +98,9 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "WY",
-        href: "http://zhengwuyang.com"
-    },{
+   #     title: "WY",
+   #     href: "http://zhengwuyang.com"
+   # },{
         title: "简书·BY",
         href: "http://www.jianshu.com/u/e71990ada2fd"
     },{
