--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ github_repo: "https://github.com/jhyalex/jhyalex.github.io.git" # you code repos
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "Stay calm, stay cool"
-sidebar-avatar: /img/haoyue.jpg    # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/Haoyue.jpg    # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
@@ -64,8 +64,8 @@ gitalk:
   clientID: f2c84e7629bb1446c1a4                            #生成的clientID
   clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
   repo: qiubaiying.github.io    #仓库名称
-  owner: qiubaiying    #github用户名
-  admin: qiubaiying
+  owner: jhyalex    #github用户名
+  admin: jhyalex
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
@@ -98,11 +98,8 @@ service-worker: true
 # Friends
 friends: [
     {
-   #     title: "WY",
-   #     href: "http://zhengwuyang.com"
-   # },{
-        title: "简书·BY",
-        href: "http://www.jianshu.com/u/e71990ada2fd"
+       title: "WM",
+       href: "https://www.wm.edu/"
     },{
         title: "Apple",
         href: "https://apple.com"
