--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,8 @@ RSS: false
 
 zhihu_username:     hao-yue-70
 github_username:    jhyalex
-linkedln_username: haoyue-jiang-968a441a2
+#linkedln_username: haoyue-jiang-968a441a2
+linkedin_username: haoyue-jiang-968a441a2
 
 
 
