--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,6 @@ RSS: false
 
 zhihu_username:     hao-yue-70
 github_username:    jhyalex
-#linkedln_username: haoyue-jiang-968a441a2
 linkedin_username: haoyue-jiang-968a441a2
 
 
@@ -102,8 +101,8 @@ friends: [
        title: "W&M",
        href: "https://www.wm.edu/"
     },{
-        title: "Scholar",
-        href: "https://scholar.google.com/"
+        title: "Joey",
+        href: "https://jwang169.github.io/junzhe.wang/templates/cmd.html#"
     },{
         title: "SUSTech",
         href: "https://www.sustech.edu.cn/en/"
