--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Haoyue Blog
 SEOTitle: 皓月的博客 | Haoyue Blog
 header-img: img/post-bg-desk.jpg
 email: haoyue.work@gmail.com
-description: "Thinking will not overcome fear but action will"
+description: "If And When We Rise Again"
 keyword: "Haoyue, Haoyue Blog, 皓月的博客"
 url: "http://jhyalex.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
