test for description

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Haoyue Blog
 SEOTitle: 皓月的博客 | Haoyue Blog
 header-img: img/post-bg-desk.jpg
 email: haoyue.work@gmail.com
-description: "If And When We Rise Again"
-keyword: "Haoyue, Haoyue Blog, 皓月的博客"
+description: If And When We Rise Again
+keyword: Haoyue, Haoyue Blog, 皓月的博客
 url: "http://jhyalex.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/jhyalex/jhyalex.github.io.git" # you code repository
