--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 title: Haoyue Blog
 SEOTitle: 皓月的博客 | Haoyue Blog
-header-img: img/post-bg-desk.jpg
+header-img: img/HY-home-backgroud.jpg
 email: haoyue.work@gmail.com
-description: If And When We Rise Again
+description: "If And When We Rise Again" 
 keyword: Haoyue, Haoyue Blog, 皓月的博客
 url: "http://jhyalex.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
