add curt to friends

--- a/_config.yml
+++ b/_config.yml
@@ -106,5 +106,8 @@ friends: [
     },{
         title: "Joey",
         href: "https://jwang169.github.io/junzhe.wang/templates/cmd.html#"      
+    },{
+        title: "Curt",
+        href:"https://suny-dan.github.io/"
     }
 ]
